# marshmallow-tesseract-trainer

./: CMakeLists.txt  QTesseract.cpp  QTesseract.h  README.md  TesseractTrainer.cpp  TesseractTrainer.h  TesseractTrainer.ui  main.cpp
